# django-vendor

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  README.md  README.rst  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg.old  setup.py  tox.ini
.github/workflows/: bumpversion.yml  python-publish.yml  python-test.yml  vendor_ci.yml  vendor_develop.yml
develop/: manage.py
develop/autoslug/: apps.py  models.py  translations.py
develop/autoslug/migrations/: 0001_initial.py
develop/core/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
develop/core/fixtures/: invoice.json  offer.json  order_item.json  price.json  product.json  site.json  unittest.json  user.json
develop/core/migrations/: 0001_initial.py  0002_auto_20200630_0046.py  0002_auto_20200812_2148.py  0002_auto_20200814_2349.py  0002_auto_20200814_2358.py  0002_auto_20200908_1749.py  0002_auto_20200910_2206.py  0002_auto_20200910_2234.py  0002_auto_20200910_2334.py  0002_product_catalog.py  0003_auto_20200819_0010.py  0003_auto_20200917_1902.py  0003_product_uuid.py  0003_remove_product_catalog.py  0004_auto_20190810_2235.py  0004_auto_20200630_0233.py  0004_auto_20200820_2235.py  0004_auto_20201112_0138.py  0005_auto_20191015_2034.py  0005_auto_20200821_2238.py  0005_auto_20201118_2237.py  0006_auto_20200822_0108.py  0006_auto_20201123_1848.py  0006_product_slug.py  0007_auto_20200901_1818.py  0007_auto_20201208_1828.py  0008_auto_20200908_1735.py  0008_fix_product_receipts_m2m_table.py
develop/core/templates/core/: account.html  index.html  product_use.html
develop/core/tests/: __init__.py  conftest.py  test_api.py  test_authorizenet.py  test_checkout.py  test_config.py  test_customer_profile.py  test_dashboard.py  test_invoice.py  test_module.py  test_offers.py  test_payment.py  test_prices.py  test_processor.py  test_products.py  test_reciept.py  test_stripe.py  test_stripe_in_project.py  test_subscriptions.py
develop/develop/: settings.py  urls.py  wsgi.py
develop/fixtures/: address.json  authorizenet_test.json  developer.json  extra_products.json  recurring_offer_examples.json  site_config.json  site_examples.json  test_subscriptions.json  unit_test.json  unittest.json  user.json
develop/static/css/: global.css  stripe.css
develop/static/js/: client.js  form-validation.js  script.js
develop/templates/: base.html
develop/tests/: conftest.py  test_api.py  test_authorizenet.py  test_autoslug.py  test_autoslug_integration.py  test_checkout.py  test_customer_profile.py  test_invoice.py  test_module.py  test_offers.py  test_processor.py  test_products.py  test_reciept.py  test_stripe.py  test_stripe_elements_views.py  test_stripe_in_project.py  test_stripe_processor_helpers.py  test_stripe_query_builder.py  test_utils_vendor.py
docs/: conf.py  index.md  index.rst  installation.md  releases.md  restapi.md
docs/modules/: about.md  models.md  models.rst  processors.md  stripe-elements.md  views.md  views.rst
