[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-vendor"
version = "0.5.0"
description = "Django App Toolkit for selling digital and physical goods online."
authors = ["Grant Viklund <renderbox@gmail.com>", "Roberto Himmelbauer"]
readme = "README.md"
packages = [
    { include = "vendor", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=5.0,<6.0"
django-autoslug = "*"
django-extensions = "*"
iso4217 = "<1.12.0"

[tool.poetry.extras]
stripe = ["stripe"]
authorizenet = ["authorizenet"]

[tool.poetry.urls]
Homepage = "https://github.com/renderbox/django-vendor"
"Bug Tracker" = "https://github.com/renderbox/django-vendor/issues"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-black = "^0.3.6"
mypy = "^1.15.0"
bandit = "^1.8.3"
isort = "^6.0.1"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
django-crispy-forms = "^2.4"
django-site-configs = "^0.3.0"
django-integrations = "^0.2.0"
django-allauth = "^65.8.1"
toml = "^0.10.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
pytest-cov = "^6.1.1"
pytest-factoryboy = "^2.7.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.26.0"
pytest-bdd = "^8.1.0"

[tool.isort]
profile = "black"